examples/kubernetes/traefik/05-Middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  namespace: traefik
  name: http-redirect

spec:
  redirectScheme:
    scheme: https
    permanent: true
