examples/kubernetes/traefik/06-IngressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  namespace: traefik
  name: http-redirect

spec:
  entryPoints:
    - http
  routes:
    - kind: Rule
      match: HostRegexp(`{any:.+}`)
      middlewares:
        - name: http-redirect
          namespace: traefik
      services:
      - kind: TraefikService
        name: noop@internal

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  namespace: traefik
  name: traefik

spec:
  entryPoints:
    - https
  routes:
    - kind: Rule
      match: Host(`traefik.example.com`)
      services:
      - kind: TraefikService
        name: api@internal
  tls:
    certResolver: letsencrypt
